# cuda-convnet

./: .gitignore  ABOUT  CMakeLists.txt  Makefile  README.md  README.rst  build.sh  common-gcc-cuda-4.0.mk  common-gcc-cuda-5.0.mk  common-gcc-cuda-5.5.mk  convdata.py  convdp.py  convnet.py  convnet_.py  data.py  gpumodel.py  layer-params.cfg  layer-params.gc.cfg  layer.py  layers.cfg  layers.gc.cfg  options.py  shownet.py  util.py
cmake/: findMKL.cmake  findThreads.cmake
example-layers/: layer-params-18pct.cfg  layer-params-19pct.cfg  layer-params-80sec.cfg  layer-params-conv-local-11pct.cfg  layer-params-conv-local-13pct.cfg  layer-params-example.cfg  layer-params.gc.cfg  layers-18pct.cfg  layers-19pct.cfg  layers-80sec.cfg  layers-conv-local-11pct.cfg  layers-conv-local-13pct.cfg  layers-example.cfg  layers.gc.cfg
include/: ConvNet.cuh  CudaConv2.cuh  conv_util.cuh  convnet.cuh  cost.cuh  data.cuh  error.cuh  layer.cuh  layer_kernels.cuh  matrix.h  matrix_funcs.h  neuron.cuh  nvmatrix.cuh  nvmatrix_kernel.cuh  pyConvNet.cuh  pyconvnet.cuh  queue.h  sync.h  thread.h  util.cuh  weights.cuh  work.cuh  worker.cuh
include/common/: cblas.h  helper_cuda.h  helper_string.h  matrix.h  matrix_funcs.h  queue.h  thread.h
include/cudaconv2/: conv_util.cuh  cudaconv2.cuh
include/nvmatrix/: nvmatrix.cuh  nvmatrix_kernels.cuh  nvmatrix_operators.cuh
src/: ConvNet.cu  conv_util.cu  convnet.cu  cost.cu  data.cu  error.cu  filter_acts.cu  img_acts.cu  layer.cu  layer_kernels.cu  matrix.cpp  neuron.cu  nvmatrix.cu  nvmatrix_kernel.cu  pyConvNet.cu  pyconvnet.cu  testnvmatrix.cu  util.cu  weight_acts.cu  weights.cu  worker.cu
src/common/: CMakeLists.txt  matrix.cpp
src/cudaconv2/: CMakeLists.txt  conv_util.cu  filter_acts.cu  img_acts.cu  weight_acts.cu
src/nvmatrix/: CMakeLists.txt  nvmatrix.cu  nvmatrix_kernels.cu
